2000-04-09  Ian Peters  <itp@gnu.org>

	* src/preferences.c: Now you can choose which plugins play what player.
	* src/plugin.c, src/plugin.h: Tweaked the interface
	* plugins/random/random.c: Filled out more functions to demonstrate the
	  interface better.
	* src/main.c: slight change to prototype of iagno2_initialize_players
	  required update

2000-04-08  Ian Peters  <itp@gnu.org>

	* src/plugin.c, src/plugin.h: Added a function to the plugin spec to
	  return a busy message while the plugin decides on a move

	* src/iango2.c, src/main.c, src/main.h: Added an appbar that displays
	  prompts to move, the plugin status message, etc.  Also added a new
	  game dialog.

2000-04-08  Ian Peters  <itp@gnu.org>

	* src/iagno2.c, plugins/random/random.c: Changed code to use a thread to
	  handle moving the computer player, so that GUI won't block, updated
	  reference plugin random to reflect the change.

	* Makefile.am: Added PTHREAD_LIB

2000-04-08  Ian Peters  <itp@gnu.org>

	* src/iagno2.h, src/iagno2.c, src/main.c: Moved from the canvas back to
	  a drawing_area method, because the canvas couldn't keep up.  Moved
	  from imlib to gdk-pixbuf.

	* src/*.c, src/*.h, plugins/random/*.c, reversi-iagno2/*.c,
	  reversi-iagno2/*.h: stylistic changes (indentation, etc).

1999-10-15  Ian Peters  <itp@gnu.org>

	* First commit to CVS.